[package]
name = "erybox"
author = "Sebastien Bechet"
license = "GPL-2.0-or-later"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclidian-rythms = "0.1.0"
gcd = "2.1.0"
eframe = "0.19.0"
egui = "0.19.0"
poll-promise = "0.2.0"
tracing-subscriber = "0.3"
rodio = "0.16.0"


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"  # Optimize for size.
strip = true  # Automatically strip symbols from the binary.
